sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var tri:Boolean=true
  while(tri){
    tri=false
    for (i<-0 to getNombreValeurs()-2){
      if (plusPetit(i,i+1)){
        echange(i;i+1)
        tri=false
      }
    }
  }
}
